# binlex-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: cicd.yml
scripts/bltensor/: setup.py
scripts/bltensor/scripts/: bltensor
src/: binary.rs  config.rs  lib.rs  main.rs
src/attributes/: file.rs  mod.rs
src/bindings/python/: .gitignore  Cargo.toml
src/bindings/python/src/: binary.rs  config.rs  lib.rs
src/controlflow/: attribute.rs  block.rs  chromosome.rs  file.rs  function.rs  graph.rs  instruction.rs  mod.rs  signature.rs  symbol.rs
src/disassemblers/: mod.rs
src/disassemblers/binlex/cil/: disassembler.rs  instruction.rs
src/disassemblers/capstone/: disassembler.rs
src/formats/: elf.rs  file.rs  macho.rs  mod.rs  pe.rs  symbol.rs
src/genomics/: allepair.rs  gene.rs  genome.rs  mod.rs
src/global/: architecture.rs  format.rs  mod.rs  mode.rs
src/hashing/: minhash.rs  tlsh.rs
src/models/: binary.rs  block.rs  cfg.rs  config.rs  debug.rs  disassembler.rs  function.rs  instruction.rs  minhash.rs  mod.rs  signature.rs  symbols.rs  terminal.rs
src/models/cfg/: block.rs  function.rs  graph.rs  instruction.rs  pattern.rs  signature.rs
src/models/controlflow/: block.rs  file.rs  function.rs  graph.rs  instruction.rs  mod.rs  signature.rs  symbol.rs
src/models/disassemblers/: mod.rs
src/models/hashing/: minhash.rs  mod.rs  sha256.rs  tlsh.rs
src/models/terminal/: args.rs  config.rs  io.rs  mod.rs
src/terminal/: args.rs  io.rs
src/types/: cachedfile.rs  genome.rs  genomics.rs  lz4string.rs  memorymappedfile.rs  mod.rs
tests/: test_models_binary.rs  test_models_hashing.rs  test_pe_disassembler.rs
tests/cpp/: CMakeLists.txt  main.cpp
wix/: main.wxs
(+34 files in other folders)
