[package]
name = "binlex"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
lief = "0.15.1"
capstone = "0.12.0"
fast-tlsh = "0.1.6"
ring = "0.17.8"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
twox-hash = "2.0.0"
rand = { version = "0.8.5", features = ["small_rng"] }
once_cell = "1.20.2"
rayon = "1.10.0"
regex = "1.11.1"
dashmap = { version = "6.1.0", features = ["serde", "rayon"] }
crossbeam = "0.8.4"
crossbeam-skiplist = "0.1.3"
lz4 = "1.28.0"

[[bin]]
name = "binlex"
path = "src/main.rs"

[[bin]]
name = "blyara"
path = "src/bin/blyara.rs"